added artillery test for 1000 transactions and added currency to the wallet
